--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,41 +1,48 @@
-cmake_minimum_required(VERSION 3.20)
-
-project(thread_safe_queue)
-
-# find_program(CLANG_TIDY_EXE NAMES "clang-tidy" REQUIRED)
-
-# Set include dirs
-include_directories(src)
-
-# setup clang-tidy command from executable + options
-# set(CLANG_TIDY_COMMAND "${CLANG_TIDY_EXE}" "-config-file=${CMAKE_SOURCE_DIR}/.clang-tidy")
-
-set(Boost_USE_STATIC_LIBS OFF) 
-set(Boost_USE_MULTITHREADED ON)  
-set(Boost_USE_STATIC_RUNTIME OFF) 
-find_package(Boost 1.74.0 COMPONENTS lockfree) 
-
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-endif()
-
-add_subdirectory(src)
-
-add_executable(thread_safe_queue main.cpp)
-
-# Linker
-target_link_libraries(thread_safe_queue PRIVATE core ${Boost_LIBRARIES})
+cmake_minimum_required(VERSION 3.15)
+project(ThreadSafeApp VERSION 1.0.0 LANGUAGES CXX)
 
 # Set C++ standard
-target_compile_features(thread_safe_queue PRIVATE cxx_std_20)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Set clang-tidy checks
-set_target_properties(thread_safe_queue PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
+# Find dependencies (for regular_lib)
+# find_package(Boost 1.75 REQUIRED COMPONENTS system filesystem)
 
-# Set compiler flags
-if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang" )
-  target_compile_options(thread_safe_queue PRIVATE 
-    -Wall -Wextra -Wundef -Wshadow -Wcast-align -Wpointer-arith -Wcast-qual 
-    -Wswitch-default -Wswitch-enum -Wconversion -Wunreachable-code 
-  )
-endif()
+# Configure header-only library
+add_subdirectory(libs/ts_queue)
+
+# Configure regular library
+add_subdirectory(libs/utils)
+
+# Configure src
+add_subdirectory(src)
+
+# Create main executable
+add_executable(app
+    main.cpp
+)
+
+# Linker
+target_link_libraries(app PRIVATE core common)
+
+# Set include directories for main app
+target_include_directories(app
+    PRIVATE
+        include
+        libs/utils/include
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
+
+# Link dependencies
+target_link_libraries(app
+    PRIVATE
+        ts_queue
+        utils
+        # Boost::system
+        # Boost::filesystem
+)
+
+# Set output directory
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
