--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,18 +1,17 @@
-add_library(core
-    task.cpp
-    worker.cpp
+add_library(common
+    common.cpp
 )
 
 # Specify include directories for the library
-target_include_directories(core
+target_include_directories(common
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
 )
 
-target_compile_options(core PRIVATE 
+target_compile_options(common PRIVATE 
     -Wall -Wextra -Wundef -Wshadow -Wcast-align 
     -Wpointer-arith -Wcast-qual 
     -Wswitch-default -Wswitch-enum -Wconversion -Wunreachable-code 
 )
 
-target_compile_features(core PRIVATE cxx_std_20)
+target_compile_features(common PRIVATE cxx_std_20)
